# StrategyBuilder

./: README.md  example.ipynb  pyproject.toml
strategybuilder/backtesting/: long_only_backtester.py  multi_day_backtesting.py
strategybuilder/data/: bar_data.py  const.py  dataframe.py  fetcher.py  filter.py  filters.py  gap.py  indicator.py  indicators.py  news_data.py  parallel.py  resampler.py  scaler.py  sentiment.py
strategybuilder/data/utils/: filters.py  gaps.py  scaling.py  sentiment_scorer.py
strategybuilder/defaults/data/: candle_data_indicators.py  news_sentiment.py
strategybuilder/prediction/: predictor.py  recurrent_network_predictors.py
strategybuilder/rl/: agent.py
strategybuilder/rl/env/: long_only_env.py
strategybuilder/strategy/: signal.py
